--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div id="map"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_Z-SuF0F1Bw85IgrhMRtSKJEvnS-l4Oc&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 </body>
 
 </html>
